# european-heritage-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: architecture.md  heritage-rag-development-guide.md  learning-guide-agreement.md  project-status.md  scope-and-evidence-contract.md
docs/adr/: 0001-project-scope-and-evidence-contract.md  0002-python-dependency-management-and-repository-structure.md  0003-browser-native-ui-and-fastapi-delivery.md  0004-wellcome-api-and-iiif-ingestion-strategy.md  0005-append-only-bronze-storage-and-idempotent-ingestion.md  0006-canonical-work-page-schemas-and-conservative-ocr-cleaning.md  0007-versioned-page-aware-token-chunking-and-gold-datasets.md  README.md  learning-guide-agreement.md
docs/building_guides/: README.md  phase-02-environment-and-repository-setup.md  phase-03-ui-foundation-and-progress-dashboard.md  phase-04-wellcome-discovery-and-ingestion-client.md  phase-05-bronze-data-layer.md  phase-06-silver-normalization-and-ocr-cleaning.md  phase-07-gold-data-layer-and-chunking-experiments.md
docs/building_phases/: README.md  optional-agentic-rag-with-langgraph.md  phase-01-scope-evidence-contract-and-success-criteria.md  phase-02-environment-and-repository-setup.md  phase-03-ui-foundation-and-progress-dashboard.md  phase-04-wellcome-discovery-and-ingestion-client.md  phase-05-bronze-data-layer.md  phase-06-silver-normalization-and-ocr-cleaning.md  phase-07-gold-data-layer-and-chunking-experiments.md  phase-08-embeddings-and-qdrant-indexing.md  phase-09-hybrid-retrieval-and-reranking.md  phase-10-retrieval-evaluation.md  phase-11-grounded-answer-generation-with-pydantic-ai.md  phase-12-conversation-management.md  phase-13-complete-streaming-chat-experience.md  phase-14-testing-security-and-abuse-resistance.md  phase-15-observability-ci-cd-and-production-deployment.md  phase-16-portfolio-packaging-and-technical-defence.md  project-workflow.md
frontend/: README.md  app.js  index.html  package.json  styles.css  vite.config.js
frontend/.openai/: hosting.json
frontend/scripts/: prepare-sites-build.mjs
src/european_heritage_rag/: __init__.py  cli.py
src/european_heritage_rag/api/: bronze.py  contracts.py  gold.py  main.py  silver.py
tests/api/: test_bronze_api.py  test_frontend.py  test_gold_api.py  test_health.py  test_ingestion_status.py  test_silver_api.py
tests/cli/: test_cli.py
tests/config/: test_config.py
tests/domain/: test_gold_models.py  test_silver_models.py
tests/logging/: test_logging.py
tests/pipeline/: gold_test_support.py  test_bronze.py  test_bronze_run.py  test_bronze_store.py  test_bronze_validation.py  test_chunking.py  test_gold_store.py  test_header_footer.py  test_ocr_cleaning.py  test_silver_store.py  test_silver_transform.py  test_tokenization.py
(+28 files in other folders)
