[project]
name = "european-heritage-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Serhiy", email = "spolovynko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "structlog>=26.1.0",
    "typer>=0.27.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
european-heritage-rag = "european_heritage_rag:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
