[project]
name = "european-heritage-rag"
version = "0.1.0"
description = "Evidence-first exploration of public-domain European heritage books"
readme = "README.md"
authors = [
    { name = "Serhiy", email = "spolovynko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx2>=2.7.0",
    "polars>=1.43.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "transformers>=4.53.0",
    "typer>=0.27.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
european-heritage-rag = "european_heritage_rag.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-httpx2>=1.0.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
